# xarm6lite_control

./: integration_doc.md  joystick_to_gripper.md  master_control_guide.md  xarm_control_joystick.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/d435i_xarm_setup/lib/d435i_xarm_setup/: findobj_grasp_moveit_planner  findobj_grasp_xarm_api  tf_object_to_base
install/d435i_xarm_setup/share/d435i_xarm_setup/: local_setup.sh  package.sh
install/mbot_demo/share/mbot_demo/: local_setup.sh  package.sh
install/realsense2_camera/lib/realsense2_camera/: realsense2_camera_node
install/realsense2_camera/share/realsense2_camera/: local_setup.sh  package.sh
install/realsense2_camera_msgs/share/realsense2_camera_msgs/: package.sh
install/realsense2_description/share/realsense2_description/: package.sh
install/realsense2_ros_mqtt_bridge/lib/realsense2_ros_mqtt_bridge/: realsense2_ros_mqtt_bridge
install/realsense2_ros_mqtt_bridge/share/realsense2_ros_mqtt_bridge/: package.sh
install/realsense2_rviz_plugin/share/realsense2_rviz_plugin/: package.sh
install/realsense_gazebo_plugin/share/realsense_gazebo_plugin/: package.sh
install/uf_ros_lib/share/uf_ros_lib/: package.sh
install/xarm_api/lib/xarm_api/: test_xarm_ros_client  test_xarm_velo_move  xarm_driver_node
install/xarm_api/share/xarm_api/: local_setup.sh  package.sh
install/xarm_controller/share/xarm_controller/: package.sh
install/xarm_description/share/xarm_description/: local_setup.sh  package.sh
install/xarm_gazebo/share/xarm_gazebo/: local_setup.sh  package.sh
install/xarm_moveit_config/share/xarm_moveit_config/: package.sh
install/xarm_moveit_servo/lib/xarm_moveit_servo/: xarm_keyboard_input
install/xarm_moveit_servo/share/xarm_moveit_servo/: package.sh  package.xml
install/xarm_msgs/share/xarm_msgs/: local_setup.sh  package.sh
install/xarm_planner/lib/xarm_planner/: test_dual_xarm_planner_api_joint  test_lite_gripper_realmove  test_xarm_gripper_planner_api_joint  (+7 more)
log/: latest_build
xarm_controller/config/: lite6_controllers.yaml
xarm_moveit_servo/: CMakeLists.txt
xarm_moveit_servo/config/: xarm_moveit_servo_config.yaml
xarm_moveit_servo/include/xarm_moveit_servo/: gripper_controller.h  xarm_joystick_input.h
xarm_moveit_servo/launch/: _robot_moveit_servo_realmove.launch.py  lite6_moveit_servo_realmove.launch.py
xarm_moveit_servo/src/: gripper_controller.cpp  xarm_joystick_input.cpp
(+14 files in other folders)
